--- a/style.css
+++ b/style.css
@@ -2,22 +2,37 @@
     margin: 0;
     padding: 0;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+    color: white;
+}
+body {
+    background-color: black;
 }
 
-#banner {
-    filter: brightness(0.5);
-    width: 100%;
-    height: 700px;
-    object-fit: cover;
+.blackish-effect-container {
     position: relative;
-    z-index: 0;
- }
-.nav {
-    left: 300px;
-    top: 0px;
+    background-image: url('banner.jpg');
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.8);
+    background-position: center;
+    border-bottom: 10px solid rgb(35 35 35);
+}
+
+.blackish-effect-overlay {
     position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); 
+}
+
+.nav {
+    position: relative;
+    z-index: 1;
     height: 90px;
-    width: 70vw;
+    width: 80vw;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -30,9 +45,157 @@
 .nav button {
     cursor: pointer;
     background-color: #e50914;
-    color: white;
     border: 0;
     border-radius: 4px;
     padding: 7px 18px;
     font-weight: 600;
+}
+
+.info {
+    padding-top: 205px;
+    text-align: center;
+    margin: auto;
+    width: 70vw;
+    position: relative;
+    z-index: 1;
+}
+
+.info h1 {
+    font-weight: 800;
+    font-size: 3rem;
+}
+.info p {
+    padding-top: 16px;
+    font-size: 1.5rem;
+}
+.info form h3 {
+    font-size: 1.25rem;
+    font-weight: 400;
+}
+
+.search {
+    padding: 15px 0 150px 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+#email {
+    width: 370px;
+    border: 1px solid rgb(97 97 97);
+    background-color: rgb(15 15 16);
+    font-size: 1rem;
+    font-weight: 700;
+    padding: 15px 8px;
+    border-radius: 4px;
+    color: rgb(255, 251, 251);
+}
+#start {
+    margin-left: 5px;
+    font-size: 1.5rem;
+    border-radius: 4px;;
+    border: 0;
+    padding: 0 25px;
+    background-color: #e50914;
+    cursor: pointer;
+}
+#start strong{
+    color: white;
+}
+.bb{
+    border-bottom: 10px solid rgb(35 35 35);
+
+}
+.sec{
+    align-items: center;
+    padding: 20px 0 70px 0;
+    margin: auto;
+    width: 80vw;
+    display: grid;
+    grid-template-columns: repeat(2,50%);
+    grid-template-rows: 100%;
+}
+.heading{
+    padding-right: 30px;
+}
+.heading h1 {
+    font-size: 48px;
+}
+.heading p {
+    margin-top: 14px;
+    font-size: 24px;
+}
+.image {
+    padding-top: 50px;
+    position: relative;
+}
+.image img {
+    width: 500px;
+}
+.image video {
+    width: 368px;
+    top: 30%;
+    left: 12%;
+    position: absolute;
+    z-index: -1;
+}
+
+.movie{
+    top: 70%;
+    background: black;
+    left: 19%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 285px;
+    height: 105px;
+    border: 2px solid rgb(90 90 90);
+    border-radius: 10px;
+    position: absolute;
+}
+.movie img {
+    width: 60px;
+}
+
+#p2 {
+    color: #0071eb;
+}
+
+.questions {
+    padding: 50px;
+    width: 80vw;
+    margin: auto;
+}
+
+.questions h1 {
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 900;
+    padding-bottom: 20px;
+}
+.bb1 {
+    border-bottom: 1px solid black;
+}
+.q{
+    margin-bottom: 8px;
+}
+.qa {
+    background-color: rgb(45 45 45);
+    font-size: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 0;
+}
+.qa span,.qa p {
+    margin: 0 24px ;
+}
+.ans {
+    padding-left: 24px;
+    padding-right: 24px;
+}
+.ansNo {
+    display: none;
+}
+.ansYes {
+    display: block;
 }
